--- a/index.html
+++ b/index.html
@@ -1,31 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>INVO Academy JS Starter with Vite</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>INVO Academy JS Starter with Vite</title>
-</head>
+  <!-- In order to start your challenge, remove all the content inside <div id="home-page"></div> and start coding :) -->
 
-<!-- In order to start your challenge, remove all the content inside <div id="home-page"></div> and start coding :) -->
-
-<body>
-  <div id="home-page">
-    <div>
-      <img src="/public/images/javascript.svg" class="logo vanilla" alt="JavaScript logo" />
-      <h1>INVO Academy JS Starter with Vite</h1>
-      <p>
-        See the README.md for more information on how to start your challenge.
-      </p>
-      <div class="card">
-        <button id="counter" type="button"></button>
-      </div>
+  <body>
+    <div class="container">
+      <ul class="advantage__list">
+        <li class="advantage__list-item">
+          <div class="advantage__icon-border">
+            <img class="advantage__icon" src="/images/3d-box.svg" />
+          </div>
+          <div>
+            <h3 class="advantage__heading">Increased use of technology</h3>
+            <p class="advantage__description">
+              The insurance industry is expected to adopt more technology-driven
+              solutions to improve the customer experience and streamline
+              operations. This will enable them to offer more competitive
+              pricing and improve the customer experience
+            </p>
+          </div>
+          <a href="#" class="advantage__btn">
+            Learn More
+            <img src="/images/arrow.svg" />
+          </a>
+        </li>
+        <li class="advantage__list-item advantage__list-item--second">
+          <div class="advantage__icon-border advantage__icon-border--second">
+            <img class="advantage__icon" src="/images/3d-box.svg" />
+          </div>
+          <div>
+            <h3 class="advantage__heading">
+              Customization and personalization
+            </h3>
+            <p class="advantage__description">
+              The insurance industry is expected to adopt more technology-driven
+              solutions to improve the customer experience and streamline
+              operations. This will enable them to offer more competitive
+              pricing and improve the customer experience
+            </p>
+          </div>
+          <a href="#" class="advantage__btn">
+            Learn More
+            <img src="/images/arrow.svg" />
+          </a>
+        </li>
+        <li class="advantage__list-item advantage__list-item--thirdy">
+          <div class="advantage__icon-border advantage__icon-border--thirdy">
+            <img class="advantage__icon" src="/images/3d-box.svg" />
+          </div>
+          <div>
+            <h3 class="advantage__heading">
+              Sustainability and social responsibility
+            </h3>
+            <p class="advantage__description">
+              As consumers become more environmentally and socially conscious,
+              insurance companies are likely to place a greater emphasis on
+              sustainability and social responsibility in their products and
+              operations
+            </p>
+          </div>
+          <a href="#" class="advantage__btn">
+            Learn More
+            <img src="/images/arrow.svg" />
+          </a>
+        </li>
+      </ul>
     </div>
-  </div>
 
-  <script type="module" src="/src/global-scripts/main.js"></script>
-  <script type="module" src="/src/pages/home-page/scripts/home-page.js"></script>
-</body>
-
+    <script type="module" src="/src/global-scripts/main.js"></script>
+    <script
+      type="module"
+      src="/src/pages/home-page/scripts/home-page.js"
+    ></script>
+  </body>
 </html>
