fight whit svg ;P

--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
       <ul class="advantage__list">
         <li class="advantage__list-item">
           <div class="advantage__icon-border">
-            <img class="advantage__icon" src="/images/3d-box.svg" />
+            <svg class="icon">
+              <use
+                xlink:href="/images/d-box-1.svg"
+                width="40"
+                height="40"
+              ></use>
+            </svg>
           </div>
           <div>
             <h3 class="advantage__heading">Increased use of technology</h3>
@@ -27,12 +33,19 @@
           </div>
           <a href="#" class="advantage__btn">
             Learn More
-            <img src="/images/arrow.svg" />
+            <svg
+              class="advantage__btn-arrow"
+              xmlns="http://www.w3.org/2000/svg"
+              width="40"
+              height="32"
+            >
+              <use href="/images/arrow1"></use>
+            </svg>
           </a>
         </li>
         <li class="advantage__list-item advantage__list-item--second">
           <div class="advantage__icon-border advantage__icon-border--second">
-            <img class="advantage__icon" src="/images/3d-box.svg" />
+            <img class="advantage__icon" src="/images/single-user.svg" />
           </div>
           <div>
             <h3 class="advantage__heading">
@@ -47,12 +60,28 @@
           </div>
           <a href="#" class="advantage__btn">
             Learn More
-            <img src="/images/arrow.svg" />
+            <svg
+              class="advantage__btn-arrow"
+              xmlns="http://www.w3.org/2000/svg"
+              width="12"
+              height="9"
+            >
+              <path
+                fill="none"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="3.52"
+                d="M37.77 16.02H2.91M23.83 2.9 37.82 16l-14 13.1"
+              />
+            </svg>
           </a>
         </li>
         <li class="advantage__list-item advantage__list-item--thirdy">
           <div class="advantage__icon-border advantage__icon-border--thirdy">
-            <img class="advantage__icon" src="/images/3d-box.svg" />
+            <img
+              class="advantage__icon"
+              src="/images/business-products-14.svg"
+            />
           </div>
           <div>
             <h3 class="advantage__heading">
@@ -67,7 +96,20 @@
           </div>
           <a href="#" class="advantage__btn">
             Learn More
-            <img src="/images/arrow.svg" />
+            <svg
+              class="advantage__btn-arrow"
+              xmlns="http://www.w3.org/2000/svg"
+              width="12"
+              height="9"
+            >
+              <path
+                fill="none"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="3.52"
+                d="M37.77 16.02H2.91M23.83 2.9 37.82 16l-14 13.1"
+              />
+            </svg>
           </a>
         </li>
       </ul>
