--- a/index.html
+++ b/index.html
@@ -7,20 +7,12 @@
     <title>INVO Academy JS Starter with Vite</title>
   </head>
 
-  <!-- In order to start your challenge, remove all the content inside <div id="home-page"></div> and start coding :) -->
-
   <body>
     <div class="container">
       <ul class="advantage__list">
         <li class="advantage__list-item">
           <div class="advantage__icon-border">
-            <svg class="icon">
-              <use
-                xlink:href="/images/d-box-1.svg"
-                width="40"
-                height="40"
-              ></use>
-            </svg>
+            <img class="advantage__icon" src="/images/d-box-1.svg" />
           </div>
           <div>
             <h3 class="advantage__heading">Increased use of technology</h3>
@@ -31,17 +23,7 @@
               pricing and improve the customer experience
             </p>
           </div>
-          <a href="#" class="advantage__btn">
-            Learn More
-            <svg
-              class="advantage__btn-arrow"
-              xmlns="http://www.w3.org/2000/svg"
-              width="40"
-              height="32"
-            >
-              <use href="/images/arrow1"></use>
-            </svg>
-          </a>
+          <a href="#" class="advantage__btn"> Learn More &#10140; </a>
         </li>
         <li class="advantage__list-item advantage__list-item--second">
           <div class="advantage__icon-border advantage__icon-border--second">
@@ -58,23 +40,7 @@
               pricing and improve the customer experience
             </p>
           </div>
-          <a href="#" class="advantage__btn">
-            Learn More
-            <svg
-              class="advantage__btn-arrow"
-              xmlns="http://www.w3.org/2000/svg"
-              width="12"
-              height="9"
-            >
-              <path
-                fill="none"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="3.52"
-                d="M37.77 16.02H2.91M23.83 2.9 37.82 16l-14 13.1"
-              />
-            </svg>
-          </a>
+          <a href="#" class="advantage__btn"> Learn More &#10140; </a>
         </li>
         <li class="advantage__list-item advantage__list-item--thirdy">
           <div class="advantage__icon-border advantage__icon-border--thirdy">
@@ -94,23 +60,7 @@
               operations
             </p>
           </div>
-          <a href="#" class="advantage__btn">
-            Learn More
-            <svg
-              class="advantage__btn-arrow"
-              xmlns="http://www.w3.org/2000/svg"
-              width="12"
-              height="9"
-            >
-              <path
-                fill="none"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="3.52"
-                d="M37.77 16.02H2.91M23.83 2.9 37.82 16l-14 13.1"
-              />
-            </svg>
-          </a>
+          <a href="#" class="advantage__btn"> Learn More &#10140; </a>
         </li>
       </ul>
     </div>
