--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
               Customization and personalization
             </h3>
             <p class="advantage__description">
-              The insurance industry is expected to adopt more technology-driven
-              solutions to improve the customer experience and streamline
-              operations. This will enable them to offer more competitive
-              pricing and improve the customer experience
+              With the rise of big data and advanced analytics, insurance
+              companies will be better equipped to offer customized and
+              personalized insurance products based on an individual's unique
+              circumstances and needs
             </p>
           </div>
           <a href="#" class="advantage__btn"> Learn More &#10140; </a>
